[project]
name = "pave_repave"
version = "0.1.0"
description = "HSA pave/repave utilities"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
]

[project.scripts]
become_hsa = "pave_repave.become_hsa:main"
fail_over = "pave_repave.fail_over:main"
get_integration_token = "pave_repave.get_integration_token:main"
get_state = "pave_repave.get_state:main"
leave_cluster_hsa = "pave_repave.leave_cluster_hsa:main"
peer_info = "pave_repave.peer_info:main"
switch_primary_secondary = "pave_repave.switch_primary_secondary:main"
state_info = "pave_repave.state_info:main"
paverepave = "pave_repave.paverepave:main"
get_token = "pave_repave.get_token:main"
add_hsa = "pave_repave.add_hsa:main"
remove_hsa = "pave_repave.remove_hsa:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
